@@ -1,3 +1,8 @@
+2008-11-17  Esteban Sanchez  <estebans@artica.es>
+
+	* operation/users/user_spare_workunit.php: Fixed date picker control
+	for workunit date.
+
 2008-11-17 Sancho Lerena <slerena@artica.es>
 
 	* report_full.php: New full repor for user.
